# backend/src/routes/apiRoutes.ts
@@ -3,6 +3,7 @@ import multer from "multer";
 import uploadConfig from "../config/upload";
 
 import * as ApiController from "../controllers/ApiController";
+import isApiToken from "../middleware/isApiToken";
 import isAuthApi from "../middleware/isAuthApi";
 
 const upload = multer(uploadConfig);
@@ -10,5 +11,7 @@ const upload = multer(uploadConfig);
 const ApiRoutes = express.Router();
 
 ApiRoutes.post("/send", isAuthApi, upload.array("medias"), ApiController.index);
+
+ApiRoutes.post("/v1/send", isApiToken('create:messages'), upload.array("medias"), ApiController.index);
 
 export default ApiRoutes;
