# backend/src/routes/contactRoutes.ts
@@ -1,4 +1,5 @@
 import express from "express";
+import isApiToken from "../middleware/isApiToken";
 import isAuth from "../middleware/isAuth";
 
 import * as ContactController from "../controllers/ContactController";
@@ -6,13 +7,14 @@ import * as ImportPhoneContactsController from "../controllers/ImportPhoneContac
 
 const contactRoutes = express.Router();
 
-contactRoutes.post("/contacts/import", isAuth, ImportPhoneContactsController.store);
 contactRoutes.get("/contacts", isAuth, ContactController.index);
 contactRoutes.get("/contacts/:contactId", isAuth, ContactController.show);
 contactRoutes.post("/contacts", isAuth, ContactController.store);
+contactRoutes.post("/v1/contacts", isApiToken('create:contacts'), ContactController.store);
 contactRoutes.post("/contact", isAuth, ContactController.getContact);
 contactRoutes.put("/contacts/:contactId", isAuth, ContactController.update);
 contactRoutes.delete("/contacts/:contactId", isAuth, ContactController.remove);
-contactRoutes.delete("/contacts", isAuth, ContactController.removeAll);
+
+contactRoutes.post("/contacts/import", isAuth, ImportPhoneContactsController.store);
 
 export default contactRoutes;
